[gd_scene load_steps=3 format=3 uid="uid://dhmshsv4es3oe"]

[ext_resource type="Script" path="res://HUD.gd" id="1_08mq4"]
[ext_resource type="FontFile" uid="uid://dgeshtyyx7tcu" path="res://Tribeca.ttf" id="2_cv50l"]

[node name="HUD_Canvas" type="CanvasLayer"]
process_mode = 3

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_08mq4")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 1
offset_left = 5.0
offset_top = 3.0
offset_right = 495.0
offset_bottom = 135.0
scale = Vector2(0.649143, 0.645491)

[node name="TimerLabel" type="Label" parent="HUD/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0.835294, 0.0392157, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_cv50l")
theme_override_font_sizes/font_size = 50
text = "Time: 0"

[node name="ScoreLabel" type="Label" parent="HUD/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0.843137, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_cv50l")
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="HealthBar" type="TextureProgressBar" parent="HUD"]
z_index = -1
layout_mode = 0
offset_left = 10.0
offset_top = 101.0
offset_right = 25.0
offset_bottom = 141.0
scale = Vector2(25.8382, 0.698255)
step = 0.01
nine_patch_stretch = true
texture_progress_offset = Vector2(1, 0)
tint_under = Color(0.444036, 0.750438, 0.170272, 1)
tint_over = Color(0.284658, 0.746931, 0.187129, 1)
tint_progress = Color(0.259948, 0.591017, 0.327505, 1)

[node name="PauseButton" type="Button" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -198.0
offset_top = -17.0
offset_right = -2.0
offset_bottom = 72.0
grow_horizontal = 0
scale = Vector2(1.00145, 1.19142)
theme_override_colors/font_color = Color(0.764706, 0.862745, 0.117647, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_cv50l")
theme_override_font_sizes/font_size = 50
toggle_mode = true
keep_pressed_outside = true
text = "Pause"
flat = true

[node name="PauseSymbol" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -35.0
offset_right = -24.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.59558, 1.8603)
theme_override_fonts/font = ExtResource("2_cv50l")
theme_override_font_sizes/font_size = 50
text = "PAUSED"

[node name="GetTheKey" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.5
offset_right = 196.5
offset_bottom = 64.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cv50l")
theme_override_font_sizes/font_size = 50
text = "Get the key!"

[connection signal="hidden" from="HUD/HealthBar" to="HUD" method="update_health"]
[connection signal="value_changed" from="HUD/HealthBar" to="HUD" method="update_health"]
[connection signal="pressed" from="HUD/PauseButton" to="HUD" method="_on_pause_pressed"]
